--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@prisma/cli": "2.8.0",
     "@prisma/client": "2.8.0",
+    "@stripe/stripe-js": "1.9.0",
     "blitz": "0.23.4",
     "final-form": "4.20.1",
     "react": "0.0.0-experimental-7f28234f8",
@@ -38,6 +39,7 @@
     "react-final-form": "6.5.1",
     "react-gravatar": "2.6.3",
     "secure-password": "4.0.0",
+    "stripe": "8.113.0",
     "zod": "1.11.9"
   },
   "devDependencies": {
