--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     ]
   },
   "dependencies": {
+    "@headlessui/react": "0.2.0",
     "@prisma/cli": "2.8.0",
     "@prisma/client": "2.8.0",
     "@stripe/stripe-js": "1.9.0",
     "blitz": "0.23.4",
     "final-form": "4.20.1",
+    "micro": "9.3.4",
+    "micro-cors": "0.1.1",
     "react": "0.0.0-experimental-7f28234f8",
     "react-dom": "0.0.0-experimental-7f28234f8",
     "react-error-boundary": "2.3.2",
