--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 # This env file should be checked into source control
 # This is the place for default values that should be used in all environments
+# duplicate this and create .env.local and fill in your values there
+DATABASE_URL="file:./db.sqlite"
+STRIPE_SKEY="sk_test_..."
+STRIPE_PKEY="pk_test_..."
+WEBHOOK_SECRET="whsec_..."
